--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,11 @@
     },
     "autoload": {
         "psr-4": {
-            "SimpleSAML\\modules\\authlinkedin\\": "lib/"
+            "SimpleSAML\\Module\\authlinkedin\\": "lib/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\SimpleSAML\\modules\\authlinkedin\\TestFiles\\": "tests/files",
             "SimpleSAML\\Test\\Utils\\": "vendor/simplesamlphp/simplesamlphp/tests/Utils"
         }
     },
