--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "require": {
         "php": ">=5.6",
-        "simplesamlphp/composer-module-installer": "~1.1"
+        "simplesamlphp/composer-module-installer": "~1.1",
         "simplesamlphp/composer-module-oauth": "~1.0"
     },
     "require-dev": {
